<resources>
    <string name="app_name">Eventos</string>
    <string name="let_s_get_started">Let’s Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_into_your_account">Sign in into your account</string>
    <string name="hey_welcome_back">Hey, Welcome back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="you_don_t_have_an_account_singup">You don’t have an account ? singup</string>
    <string name="here">here</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="by_creating_an_account_or_login_you_accepted_our">By creating an account or login you accepted our</string>
    <string name="terms_and_condition">Terms and condition</string>
    <string name="login">LOGIN</string>
    <string name="welcome_to_our_page_we_re_so_excited_to_see_you_among_us">Welcome to our page we’re so excited to see You among us</string>
    <string name="username">Username</string>
    <string name="already_have_an_account_singin">Already have an account ? singin</string>
    <string name="sign_up">SIGN UP</string>
    <string name="your_interests">Choose interests</string>
    <string name="interest_desc">Choose your favorite interest to get new shows</string>
    <string name="comming">Coming</string>
    <string name="see_all">See All</string>
    <string name="popular">Popular</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="add_event">Add Event</string>
    <string name="description">Description</string>
    <string name="Interest">interest</string>
    <string name="interest_persons">interest persons</string>
    <string name="event_name">Event name</string>
    <string name="event_start_at">Start date</string>
    <string name="event_end_at">Ends date</string>
    <string name="publish">publish</string>
    <string name="this_email_field_cannot_be_empty">This email field cannot be empty</string>
    <string name="this_password_field_cannot_be_empty">This password field cannot be empty</string>
    <string name="this_username_field_cannot_be_empty">This username field cannot be empty</string>
    <string name="select_a_category">Select a category</string>
    <string name="favorite">Favorite</string>
    <string name="all_events">All Events</string>
    <string name="cetegory">Cetegory</string>
    <string name="get_tickey">Get Tickey</string>
    <string name="month">Nov</string>
    <string name="date">20</string>
    <string name="cqtegory">Talkshow</string>
    <string name="category">Category</string>
</resources>