<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:orientation="vertical"
    tools:context=".views.AddEventActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/add_event"
            android:textColor="@color/white"/>

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_name_layout"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="60dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name"
                android:hint="@string/event_name"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_start_at_layout"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="60dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_start_at"
                android:hint="@string/event_start_at"
                android:inputType="date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_ends_at_layout"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="60dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_ends_at"
                android:hint="@string/event_end_at"
                android:inputType="date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_description_layout"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="60dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_description"
                android:hint="@string/description"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            app:strokeWidth="0dp"
            android:layout_marginBottom="10dp"
            android:layout_height="200dp">
            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"
                />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_publish"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/publish"
            app:cornerRadius="10dp"/>
    </LinearLayout>

</LinearLayout>